PR comments part 1